syntax = "proto3";

package com.example.grpc;

message GetMailRequest {
  int64 id = 1;
}

message GetMailResponse {
  repeated string mail = 1;
}

message GetMailExistsRequest {
  int64 id = 1;
  string mail = 2;
}

message GetMailExistsResponse {
  bool exists = 1;
}

message AddMailRequest {
  int64 id = 1;
  string mail = 2;
}

message AddMailResponse {
  int64 id = 1;
}

message SaveUserRequest {
  string email = 1;
  string password = 2;
  repeated string roles = 3;
  string reg_date = 4;
}

message SaveUserResponse {
  int64 id = 1;
}

message GetUserDetailsRequest {
  string email = 1;
}

message GetUserDetailsResponse {
  int64 id = 1;
  string email = 2;
  string password = 3;
  repeated string roles = 4;
  string reg_date = 5;
}

message GetUserRolesRequest {
  int64 id = 1;
}

message GetUserRolesResponse {
  repeated string roles = 1;
}

message GetUserExistsRequest {
  string email = 1;
}

message GetUserExistsResponse {
  bool exists = 1;
}

message DeleteMailRequest {
  int64 id = 1;
  string mail = 2;
}

message DeleteMailResponse {
  int64 id = 1;
}

service UserService {
  rpc saveUser (SaveUserRequest) returns (SaveUserResponse);
  rpc getDetails (GetUserDetailsRequest) returns (GetUserDetailsResponse);
  rpc userExists (GetUserExistsRequest) returns (GetUserExistsResponse);
}

service MailService {
  rpc getMails (GetMailRequest) returns (GetMailResponse);
  rpc saveMail (AddMailRequest) returns (AddMailResponse);
  rpc mailExists (GetMailExistsRequest) returns (GetMailExistsResponse);
  rpc deleteMail (DeleteMailRequest) returns (DeleteMailResponse);
}

service RoleService {
  rpc getRoles (GetUserRolesRequest) returns (GetUserRolesResponse);
}